test/data/semantic-errors/greaterthan=-must-have-integer-operands.jen
notAnInteger := 'six'
anInteger := 7
aBinaryExpression := notAnInteger >= anInteger
